tests/src/frontend/typechecking/invalid/this_base_class.sk
base class MyBase {
  fun foo(this): this;
  fun foo_myself(): this {
    this.foo(this)
  }
}

class A() extends MyBase {
  fun foo(_: this): this {
    this
  }
}

fun test<T: MyBase>(x: T): T {
  x.foo(x)
}
